<resources>
    <string name="app_name">App da turma 2TJDF</string>
    <string name="hello_world">Olá turma 2TJDF</string>
    <string name="tap_me">Clique aqui</string>
    <string name="hint_your_name">Digite seu nome</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="button_continue">Continuar</string>
    <string name="already_have_an_account">Você já tem uma conta?</string>
    <string name="login">Entrar</string>
    <string name="error_empty_invalid_field">Campo de nome vazio e/ou inválido</string>
    <string name="user_saved_successfully">Usuário salvo com sucesso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_your_weight">Seu peso (Ex. 79kg)</string>
    <string name="hint_your_height">Sua altura (Ex. 180cm)</string>
    <string name="calculate">calcular</string>
</resources>